# mini-coding-agent-harness

./: .gitignore  EVAL.md  LICENSE  MCP.md  README.md  README.zh-CN.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INTERVIEW_QA.md
examples/: README.md  mcp_config.example.json
harness/: __init__.py  agent.py  demo.py  eval_analysis.py  evaluation.py  mcp_server.py  mcp_smoke.py  model_clients.py  retrieval.py  review.py  tools.py  trace.py  trace_viewer.py
reports/: AGENT_COMPARE_2_TASKS.md  AGENT_EVAL_10_TASKS.md  AGENT_EVAL_20_TASKS.json  AGENT_EVAL_20_TASKS.md  AGENT_EVAL_20_TASKS_BEFORE.json  AGENT_EVAL_36_TASKS.json  AGENT_EVAL_36_TASKS.md  AGENT_EVAL_36_TASKS_RUN2.json  AGENT_EVAL_36_TASKS_RUN2.md  AGENT_EVAL_36_TASKS_RUN3.json  AGENT_EVAL_36_TASKS_RUN3.md  AGENT_EVAL_PROMPT_IMPROVEMENT.md  AGENT_RETRIEVAL_COMPARE_CONTEXT_TASK.md  AGENT_TRACE_multi_file_service_fix.html  AGENT_TRACE_python_add_tests.html  AGENT_TRACE_retrieval_off_context_pack.html  AGENT_TRACE_retrieval_on_context_pack.html  DEMO_python_bugfix.md  DEMO_python_bugfix_TRACE.html  ERROR_RECOVERY_AGENT_FIX.json  ERROR_RECOVERY_AGENT_FIX.md  EVAL_HISTORY.md  EVAL_STABILITY.md  FAILURE_MODES.md  MCP_SMOKE.md  PORTFOLIO_WALKTHROUGH.md  README.md  RESUME_BULLETS.md
skills/: tool-implementation-verification-workflow.md
tests/: test_agent.py  test_demo.py  test_eval_analysis.py  test_evaluation.py  test_mcp_server.py  test_mcp_smoke.py  test_model_clients.py  test_retrieval.py  test_tools.py  test_trace_viewer.py
